# Double-Pendulum-Simulation

./: DoublePendSimulation.m  Interesting IC's.txt  README.md
Videos/: 2nd_try.mkv  first_try.mkv  first_try.webm
cpp/: .RK4.cpp.swp  .RK4_Test.cpp.swo  .RK4_Test.cpp.swp  CMakeCache.txt  CMakeLists.txt  DoublePendEquations.cpp  DoublePendEquations.h  DoublePendEquationsTest.cpp  FunctionWrapperRK4.cpp  FunctionWrapperRK4.h  Makefile  RK4.cpp  RK4.h  RK4_Test.cpp  RK4_time.cpp  add_data_to_website.sh  cmake_install.cmake  data.txt  equation_test  gmon.out  out.txt  print_values  print_values.cpp  rk4_output  rk4_test  time_test  time_test.cpp
cpp/qt_test/: QTREADME  example.cpp
cpp/qt_test/build-testui-Desktop_Qt_5_4_1_GCC_64bit-Debug/: moc_mainwindow.cpp  testui
cpp/qt_test/testui/: testui.pro
cpp/website_script/: RK4_verbose.cpp  RK4_versbose.cpp  get_values.cpp  make
cpp_blog/: DoublePendEquations.h  FunctionWrapperRK4.cpp  FunctionWrapperRK4.h  RK4.h  runge_kutta.cpp
matlab/: DoublePendSimulation.m  DoublePendSimulation2.m  DoublePendSimulation3.m  DoublePendSimulation4.m
matlab_blog/: DoublePendSimulation2.m  DoublePendSimulation3.m  DoublePendSimulation4.m
originals/: DoublePendEquations_old.m
