cmake_minimum_required (VERSION 2.6)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") 
project (DoublePendulum)
add_executable(equation_test DoublePendEquationsTest.cpp DoublePendEquations.cpp FunctionWrapperRK4.cpp)
add_executable(time_test RK4_Test.cpp DoublePendEquations.cpp FunctionWrapperRK4.cpp RK4_time.cpp)
add_executable(rk4_output print_values.cpp DoublePendEquations.cpp FunctionWrapperRK4.cpp RK4.cpp)